Add more styles / logic to unify projects & gallery items -> showcases.

--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
       <!-- Projects Section-->
       <section class='dark'>
         <h2 id="projects-header" class="section-title">Projects</h2>
-        <div id="projects" class="project-section">
+        <div id="projects" class="section-content">
           <span class='loading'>Loading...</span>
         </div>
       </section>
       <!-- Gallery Section-->
       <h2 class="section-title">Widgets</h2>
-      <div id='widgets' class="project-section">
+      <div id='widgets' class="section-content">
         <span class='loading'>Loading...</span>
       </div>
       <h2 class="section-title">Graphics</h2>
-      <div id='graphics' class="project-section">
+      <div id='graphics' class="section-content">
         <span class='loading'>Loading...</span>
       </div>
       <h2 class="section-title">Logos</h2>
-      <div id='logos' class="project-section">
+      <div id='logos' class="section-content">
         <span class='loading'>Loading...</span>
       </div>
       <h2 class="section-title">Misc</h2>
-      <div id='misc' class="project-section">
+      <div id='misc' class="section-content">
         <span class='loading'>Loading...</span>
       </div>
       <!-- Bio Section-->
