Add mandelbrot, remove cube flip, and adjust styling.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <div class="site-wrapper">
       <!-- Landing section-->
       <div class="landing-section">
-        <canvas id="canvas"></canvas>
         <div class="word-wrapper">
           <div>
             <h1 class="first">Ian</h1>
@@ -94,9 +93,9 @@
         <p><a class="info-link" href="https://github.com/l4nk332/l4nk332.github.io" target="_blank" title='Link to GitHub for this site'>100% Handcrafted by Ian Jabour</a></p>
       </footer>
     </div>
-    <script src='assets/libraries/jquery.min.js'></script>
     <script type='module' src="assets/libraries/renga.min.js"></script>
+    <script type='module' src="js/components.js"></script>
     <script type='module' src="js/content.js"></script>
-    <script src="js/index.js"></script>
+    <script type='module' src="js/main.js"></script>
   </body>
 </html>
