Add modules section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         </div>
       </section>
       <!-- Gallery Section-->
+      <h2 class="section-title">Modules</h2>
+      <div id='modules' class="section-content">
+        <span class='loading'>Loading...</span>
+      </div>
       <h2 class="section-title">Widgets</h2>
       <div id='widgets' class="section-content">
         <span class='loading'>Loading...</span>
