Add pico blackjack and small tweak to bio.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
       <div id='modules' class="section-content">
         <span class='loading'>Loading...</span>
       </div>
+      <h2 class="section-title">Games</h2>
+      <div id='games' class="section-content">
+        <span class='loading'>Loading...</span>
+      </div>
       <h2 class="section-title">Widgets</h2>
       <div id='widgets' class="section-content">
         <span class='loading'>Loading...</span>
@@ -88,7 +92,7 @@
                 <a target="_blank" href="https://www.linkedin.com/in/ianjabour" title='Link to LinkedIn'>
                   <div class="link linkedin"></div>
                 </a></div>
-              <p>I'm a web developer residing in San Francisco, CA. When I'm not hacking away at a keyboard you'll find me at the beach catching some surf 🤙. In my day to day I work primarily with JavaScript (React) and Python (Django). I am always looking to experiment with new tools and schools of thought in both software development and design. Prior to working in software I studied film production and audio engineering. My favorite movie is Bruce Brown's <a class="info-link" href="https://www.imdb.com/title/tt0060371/" target="_blank" title='Link to IMDB'>The Endless Summer</a>.</p>
+              <p>I'm a web developer residing in San Francisco, CA. When I'm not hacking away at a keyboard you'll find me at the beach catching some surf 🤙. I am always looking to experiment with new tools and schools of thought in both software development and design. Prior to working in software I studied film production and audio engineering. My favorite movie is Bruce Brown's <a class="info-link" href="https://www.imdb.com/title/tt0060371/" target="_blank" title='Link to IMDB'>The Endless Summer</a>.</p>
             </div>
           </div>
         </div>
